@@ -1,4 +1,5 @@
 TODO
+* deal with trailing empty data
 * remove libevtx_libfguid.h once libfvalue wraps the format flags
 * libfvalue:
   - improve to value to string type support
@@ -22,6 +23,11 @@ TODO
 
 Recovery:
 * scan for records in chunk free space
+
+20120419
+* code clean up
+* improvements for distribution
+* improvements for non-debug build
 
 20120418
 * worked on libfvalue - format passing
